@@ -27,6 +27,7 @@ xcuserdata
 ## Emscripten output
 *.out.js
 *.out.wasm
+example_emscripten/example_emscripten.*
 
 ## Unix executables
 example_glfw_opengl2/example_glfw_opengl2
